# seedsync

./: README.md
DBE-SGX/: .gitignore  CMakeLists.txt  README.md  ae_instructions.md  config.json  recompile.sh
DBE-SGX/include/: chunkStructure.h  chunker.h  clientVar.h  constVar.h  cryptoPrimitive.h  dataSender.h  define.h  messageQueue.h  sync_configure.h
Plain/: CMakeLists.txt  README.md  recompile.sh  setup.sh  sync_config.json
Plain-Dedup/: LICENSE  README.md  config.json  setup.sh
Plain-Dedup/include/: chunkStructure.h  concurrentMQ.h  constVar.h  dataRetriever.h  dataSender.h  dataWriter.h  enclaveRecvDecoder.h  fastcdc_chunker.h
Plain-Dedup/src/: CMakeLists.txt
Plain/include/: chunkStructure.h  configure.h  constVar.h  cryptoPrimitive.h  define.h  finesse_util.h  locality_cache.h  phase_recv.h  phase_sender.h  rabin_poly.h  recv_thd.h  send_thd.h  stream_phase_1_thd.h  stream_phase_2_thd.h  stream_phase_3_thd.h  stream_phase_4_thd.h  stream_phase_5_thd.h  sync_configure.h  sync_data_writer.h  sync_io.h
Plain/src/: CMakeLists.txt
Plain/src/Comm/: sslConnect.cc
Plain/src/Database/: factoryDatabase.cc  inMemoryDatabase.cc
Plain/src/Enclave/: CMakeLists.txt  storeEnclave.config.xml  storeEnclave.edl
Plain/src/Enclave/ecallSrc/ecall/: syncECall.cc
Plain/src/Enclave/ecallSrc/ecallSync/: ecallStreamBaseHash.cc  ecallStreamChunkHash.cc  ecallStreamChunkIndex.cc  ecallStreamEncode.cc  ecallStreamFeature.cc  ecallStreamWriter.cc  localityCache.cc
Plain/src/Enclave/ecallSrc/ecallUtil/: commonEnclave.cc  ecallEnc.cc
Plain/src/Enclave/include/: commonEnclave.h  ecallStreamBaseHash.h  ecallStreamChunkHash.h  ecallStreamChunkIndex.h  ecallStreamEncode.h  ecallStreamFeature.h  ecallStreamWriter.h  ecallSyncStorage.h  localityCache.h  syncECall.h  syncOcall.h
Plain/src/Enclave/ocallSrc/: syncOCall.cc
Plain/src/Sync/: CMakeLists.txt  locality_cache.cc  phase_recv.cc  phase_sender.cc  plainsync_main.cc  recv_thd.cc  send_thd.cc  stream_phase_1_thd.cc  stream_phase_2_thd.cc  stream_phase_3_thd.cc  stream_phase_4_thd.cc  stream_phase_5_thd.cc  sync_configure.cc  sync_data_writer.cc  sync_io.cc  sync_storage.cc
Plain/src/Util/: bloom-filter.cc  cryptoPrimitive.cc  finesse_util.cc  lz4.cc  readCache.cc
Scripts/: common.sh  settings.sh
Scripts/run/: setup.sh  (+12 more)
SeedSync/: CMakeLists.txt  LICENSE  README.md  config.json  setup.sh  sync_config.json
(+149 files in other folders)
